<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_sup_inf"
            android:layout_marginTop="@dimen/margen_sup_inf"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tag_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_nombre"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_sup_inf"
            android:layout_marginTop="@dimen/margen_sup_inf"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tag_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_edad"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/et_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edad"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_sup_inf"
            android:layout_marginTop="@dimen/margen_sup_inf"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tag_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_correo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_sup_inf"
            android:layout_marginTop="@dimen/margen_sup_inf"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tag_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel_fono"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tel_fono"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_sup_inf"
            android:layout_marginTop="@dimen/margen_sup_inf"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tag_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag_contrase_a"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/et_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_sup_inf"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

    </LinearLayout>

</ScrollView>
